test/langtools/tools/javac/SuperInit/EarlyLocalClass.out
EarlyLocalClass.java:15:32: compiler.err.cant.ref.before.ctor.called: this
1 error
